# flora-fauna-mirror

./: .gitignore  .gitlab-ci-broken.yml  .gitlab-ci-clean.yml  .gitlab-ci-complex.yml  .gitlab-ci-minimal.yml  .gitlab-ci-new.yml  .gitlab-ci-old.yml  .gitlab-ci-simple.yml  .gitlab-ci.yml  AUTO_LOCATION_FIXES.md  CHANGELOG.md  CLOUD_DATABASE_SETUP.md  COMPLETE_SETUP.sql  CONTRIBUTING.md  CREATE_OWN_SUPABASE.md  DEPLOYMENT.md  DEVICE_GPS_LOCATION_SYSTEM.md  Dockerfile  GITLAB_DEPLOYMENT.md  GITLAB_RUNNER_SOLUTIONS.md  QUICK_FIX_SUMMARY.md  README.md  README_FRONTEND.md  README_GITLAB.md  RUNNER_SETUP_GUIDE.md  STAGE2_README.md  SUPABASE_STORAGE_SETUP.md  TEAM_SETUP_GUIDE.md  add_text_bucket.sql  alternative_storage_fix.sql  analytics.py  app.js  app.py  app.py.broken  app.py.corrupted.backup  app_backup.py  app_backup_20250721_205517.py  app_clean.py  app_corrupted_backup.py  auto_location.py  (+45 more)
.github/workflows/: deploy.yml
.gitlab/: bug_report_template.md  bugfix_mr_template.md  data_contribution_template.md  data_mr_template.md  documentation_template.md  feature_request_template.md  issue_template.md  merge_request_template.md
.gitlab/issue_templates/: bug_report.md
.gitlab/merge_request_templates/: default.md
LICENSE/: LICENSE.md
react-homepage/: .env.example  QUICK_START.md  README.md  package-lock.json  package.json  setup-supabase.sql
react-homepage/src/: App.jsx  index.css
react-homepage/src/components/: Footer.jsx  Hero.jsx  Navbar.jsx  PostsSection.jsx
react-homepage/src/hooks/: usePosts.js
react-homepage/src/lib/: supabase.js
